<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg">Сходите за покупками в Ваш любимый магазин, используя наше приложение!</string>
<string name="lbl_code">code</string>
<string name="lbl_1">Бананы, 1 кг.</string>
<string name="lbl_207">207 руб</string>
<string name="lbl4">Познакомимся?</string>
<string name="lbl5">Имя</string>
<string name="lbl_forceful">FORCEFUL</string>
<string name="lbl2">Номер телефона</string>
<string name="lbl_69">69 руб</string>
<string name="lbl3">Код отправлен!</string>
<string name="lbl_forceful2">Это FORCEFUL.</string>
<string name="msg4">Введите его в поля ниже.</string>
<string name="msg3">Введите Ваш номер телефона.</string>
<string name="msg2">Добро пожаловать!</string>
<string name="msg6">Завершить регистрацию</string>
<string name="msg5">Как мы можем к Вам обращаться?</string>
<string name="lbl_12">1</string>
<string name="lbl_32">3</string>
<string name="lbl_99">99 руб</string>
<string name="lbl_male">male</string>
<string name="lbl_oreo">Печенье OREO</string>
<string name="lbl8">Корзина</string>
<string name="lbl9">Молоко</string>
<string name="lbl_375">375 руб.</string>
<string name="lbl6">Дата рождения</string>
<string name="lbl7">Пол</string>
<string name="lbl10">Итого:</string>
<string name="lbl11">Добавить товар</string>
<string name="lbl">Продолжить</string>
<string name="lbl12">Оплатить</string>
<string name="lbl13">НАСТРОЙКИ</string>
<string name="msg_please_enter_valid_mo_nu">Please enter valid mobile number</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="gender_prompt">Выберите пол</string>
        <string-array name="gender_options">
            <item>Мужской</item>
            <item>Женский</item>
        </string-array>
    <string name="msg7">Выход из аккаунта</string>
</resources>
