<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="nbVM" type="com.application.app.modules.nb.data.viewmodel.NbVM"/>
    </data>
    <FrameLayout android:id="@+id/frameREGTwo"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">

        <ImageView android:id="@+id/imagePattern"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/img_pattern_teal_100"
            tools:ignore="ContentDescription" tools:src="@drawable/img_pattern_teal_100"/>

        <LinearLayout
            android:id="@+id/linearColumnsearch"
            android:layout_width="match_parent"
            android:layout_height="662dp"
            android:layout_gravity="top|center"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginBottom="@dimen/_48pxv"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageSearch"
                android:layout_width="@dimen/_24pxh"
                android:layout_height="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_search"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_search" />

            <TextView
                android:id="@+id/txtWelcomeaboard"
                style="@style/txtProximaNovaregular32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_51pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:singleLine="true"
                android:text="@{nbVM.nbModel.txtWelcomeaboard}"
                tools:text="@string/lbl4" />

            <TextView
                android:id="@+id/txtLetsgetyour"
                style="@style/txtInterregular20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:text="@{nbVM.nbModel.txtLetsgetyour}"
                tools:text="@string/msg5" />

            <!-- Поле выбора даты рождения -->
            <EditText
                android:id="@+id/etField"
                style="@style/etProximaNovaregular16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_45pxv"
                android:ellipsize="end"
                android:hint="@string/lbl5"
                android:inputType="text"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:paddingStart="@dimen/_1pxh"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@={nbVM.nbModel.etFieldValue}"
                android:textColorHint="@color/gray_900"
                tools:ignore="Autofill" />

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="201dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true" />

            <!-- Поле выбора пола в виде выпадающего списка -->

            <Spinner
                android:id="@+id/gender_spinner1"
                android:layout_width="329dp"
                android:layout_height="37dp"
                android:layout_margin="16dp"
                android:entries="@array/gender_options"
                android:prompt="@string/gender_prompt" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn"
                style="@style/btnSolidRounded_1"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginStart="@dimen/_38pxh"
                android:layout_marginTop="@dimen/_54pxv"
                android:layout_marginEnd="@dimen/_34pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:paddingStart="@dimen/_27pxh"
                android:paddingTop="@dimen/_18pxv"
                android:paddingEnd="@dimen/_26pxh"
                android:paddingBottom="@dimen/_18pxv"
                android:singleLine="true"
                android:text="@string/msg6"
                android:textAllCaps="false"
                tools:text="@string/msg6" />

        </LinearLayout>
    </FrameLayout>
</layout>
