<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registrVM" type="com.application.app.modules.registr.data.viewmodel.RegistrVM"/>
    </data>
    <FrameLayout android:id="@+id/frameStackpattern"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imagePattern"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/img_pattern_teal_100"
            tools:ignore="ContentDescription" tools:src="@drawable/img_pattern_teal_100"/>
        <LinearLayout android:id="@+id/linearColumnsearch"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_48pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <ImageView android:id="@+id/imageSearch"
                android:layout_gravity="start"
                android:layout_height="@dimen/_24pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_width="@dimen/_24pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_search"
                tools:ignore="ContentDescription" tools:src="@drawable/img_search"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtWelcomeaboard"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_54pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="@dimen/_7pxh"
                android:singleLine="true"
                android:text="@{registrVM.registrModel.txtWelcomeaboard}"
                style="@style/txtProximaNovaregular32" tools:text="@string/msg2"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtLetsgetyour"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:singleLine="true"
                android:text="@{registrVM.registrModel.txtLetsgetyour}"
                style="@style/txtInterregular20" tools:text="@string/msg3"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/errorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/gray_900_21"
                android:textSize="15sp"
                android:text="Был введен некорректный номер, попробуйте снова"
                android:textColor="#b31b27"
                android:visibility="invisible"
                />
            <EditText android:ellipsize="end"
                android:hint="@string/lbl2" android:id="@+id/etField"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_90pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@={registrVM.registrModel.etFieldValue}"
                android:textColorHint="@color/gray_900"
                style="@style/etProximaNovaregular16" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnCheckPhoneNumber"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_33pxh"
                android:layout_marginStart="@dimen/_38pxh"
                android:layout_marginTop="@dimen/_94pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_18pxv"
                android:singleLine="true" android:text="@string/lbl"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl"/>

             />
        </LinearLayout>
    </FrameLayout>
</layout>
